--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,10 @@
 apply plugin: 'com.android.application'
 
+
+repositories {
+    mavenCentral()
+}
+
 android {
     compileSdkVersion 24
     buildToolsVersion "24.0.1"
@@ -23,4 +28,5 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.2.0'
+    compile 'com.squareup.picasso:picasso:2.5.2'
 }
