Some changes to DatabaseAdapter, which won't really matter now that the content provider is up and running.
Database manager - split the functionality out to a separate class from the database adapter. This was done for easy reuse by the content provider.

GridFragment is no longer touching the database onResume as it had been before. This is part of backing out the legacy database adapter.

MainActivity - updates to the JSON parsing part of the asynctask. Rather than putting the JSON elements into a movieObject, we're dropping them in a contentValue object, and sending those values straight to the content resolver with the appropriate URI for database insertion. The previous logic to drop things into the database adapter has been commented out.

MovieContentProvider - handles all database access. Things are pretty simple right now. Just getting this up and working. I've built a URI matcher to identify a few different kinds of searches I expect to come in.
- onCreate() instantiates DatabaseManager for reference by other methods.
- query() takes in the standard arguments. Right now, I've only built out the cases for various queries, but haven't written any test routines.
- getType() - uses the uriMatcher to identify the query type. Returns either a DIR or ITEM type.
- insert() - accepts a uri and ContentValues. The URI matcher looks at the URI to figure out which type of insert this is. The insert logic is then handled by switch statement. Right now, only the ALL_MOVIES case has been built.
- delete() - standard arguments. I built out the ONE_MOVIE case, but I haven't written anything to test it yet.
- bulkInsert() - I built this, modeled off of the one in Sunshine, but it's stupid. Using this causes the iteration through the array to happen twice.
TMDBContract - Some modifications to the movies table. TOP_RATED, MOST_POPULAR, and USER_FAVORITE get added to the table, all booleans. MOVIE_ID remains UNIQUE, but the conflict decision is now IGNORE.
AndroidManifest - ge

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,9 +18,17 @@
         <activity android:name=".DisplayActivity" />
         <activity android:name=".MenuActivity"></activity><!-- ATTENTION: This was auto-generated to add Google Play services to your project for
      App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information. -->
+
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
+        <provider
+            android:authorities="com.example.android.popularmovies"
+            android:name="com.example.android.popularmovies.MovieContentProvider" />
     </application>
+    <provider
+        android:authorities="com.example.android.popularmovies"
+        android:name="com.example.android.popularmovies.MovieContentProvider" />
+
     <uses-permission android:name="android.permission.INTERNET" />
 </manifest>
